// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts docs 1`] = `
Array [
  Object {
    "jsDoc": null,
    "kind": "variable",
    "location": Object {
      "fileLine": 1,
      "filePath": "__dynamic__",
    },
    "name": "a",
    "type": Object {
      "properties": Array [
        Object {
          "name": "toString",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
        Object {
          "name": "toFixed",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
        Object {
          "name": "toExponential",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
        Object {
          "name": "toPrecision",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
        Object {
          "name": "valueOf",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
        Object {
          "name": "toLocaleString",
          "type": Object {
            "properties": Array [],
            "text": "any",
          },
        },
      ],
      "text": "1",
    },
  },
]
`;

exports[`jsdoc extracts doc from a variable statement 1`] = `
Object {
  "source": "/**
 * primary
 */",
}
`;

exports[`jsdoc splits multiple jsDoc blocks by primary and additional (closest to code is primary) 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;

exports[`jsdoc whitespace and comments between multiple jsDoc blocks are ignored 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;
